tests/fail/OrAssign.java
package fail;

public class OrAssign {
    public static void main(String[] args) {
        char a = 'a';
        System.out.println(a/=5);
    }
}